update to https

--- a/tuinaanleg/index.html
+++ b/tuinaanleg/index.html
@@ -2,13 +2,13 @@
 <html>
 	<head>
 		<title>Redirecting...</title>
-		<meta http-equiv="refresh" content="0;url=http://carstenkrokant.github.io/concor-landscaping/diensten/tuinaanleg/">
+		<meta http-equiv="refresh" content="0;url=https://carstenkrokant.github.io/concor-landscaping/diensten/tuinaanleg/">
 	</head>
 	<body>
 		<script type="text/javascript">
-			window.location = "http://carstenkrokant.github.io/concor-landscaping/diensten/tuinaanleg/";
+			window.location = "https://carstenkrokant.github.io/concor-landscaping/diensten/tuinaanleg/";
 		</script>
 
-		<p>You are being redirected to <a href="http://carstenkrokant.github.io/concor-landscaping/diensten/tuinaanleg/">http://carstenkrokant.github.io/concor-landscaping/diensten/tuinaanleg/</a></p>
+		<p>You are being redirected to <a href="https://carstenkrokant.github.io/concor-landscaping/diensten/tuinaanleg/">https://carstenkrokant.github.io/concor-landscaping/diensten/tuinaanleg/</a></p>
 	</body>
 </html>
